--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material-nextjs": "^5.15.7",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "next": "14.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
